# practice-mlops

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mlflow  Dockerfile.rag  Dockerfile.spark  PROJECT_CONTEXT.md  QUICKSTART_RAG.md  README.md  customer_churn_pipeline.yaml  customer_churn_pipeline_reconstructed.py  customer_churn_pipeline_with_decorator.py  full_pipeline.yaml  kfp_openlineage_decorator.py  rag_ingestion_pipeline.yaml  requirements.txt
configs/: settings.py
data/sample_docs/: feast_features.md  ml_basics.md  mlops_guide.md  openlineage_basics.txt
dataset-registry/: README.md
dataset-registry/backend/: Dockerfile  app.py  db.py  introspect.py  lineage.py  models.py  requirements.txt
dataset-registry/frontend/: Dockerfile  entrypoint.sh  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
dataset-registry/openshift/: deploy.sh
dataset-registry/sdk/: setup.py
docs/: ARCHITECTURE.md  intro-and-lessons-learned  intro-and-lessons-learned.md  openlineage-integration-findings.md  pipeline-walkthrough.md
kind/: deploy-kind.sh  kind-config.yaml  rebuild-registry.sh
kind/base/: configmap.yaml  dataset-registry.yaml  feast-config.yaml  inference-api.yaml  marquez.yaml  minio.yaml  mlflow-db.yaml  mlflow.yaml  namespace.yaml  postgres.yaml  pvc.yaml  redis.yaml  secret.yaml
kind/jobs/: 01-minio-seed.yaml  02-etl.yaml  03-feast-apply.yaml  04-feast-materialize.yaml  05-ml-pipeline.yaml  06-promote-model.yaml
lineage-operator/: Dockerfile  Makefile  deploy-openshift.sh  go.mod  go.sum  push-to-openshift.sh
lineage-operator/cmd/: main.go
local-kind/: marquez.yaml  mlflow.yaml  registry.yaml  seed-data.yaml
openlineage-oai/: .gitignore  README.md  pyproject.toml
openlineage-oai/docs/: IMPLEMENTATION.md  MLFLOW_STORAGE.md  QA-NOTES.md
openlineage-oai/docs/code-reference/: README.md  base.md  mlflow-facets.md  mlflow-init.md  mlflow-tracking-store.md  mlflow-utils.md  sequence-diagram.md
openlineage-oai/examples/: iris_training.py
openlineage-oai/openlineage_oai/: __init__.py
openlineage-oai/openlineage_oai/adapters/: __init__.py  base.py
openlineage-oai/openlineage_oai/adapters/kfp/: __init__.py  lineage.py
openlineage-oai/openlineage_oai/adapters/mlflow/: __init__.py  facets.py  tracking_store.py  utils.py
openlineage-oai/openlineage_oai/core/: __init__.py  config.py  emitter.py  facets.py  registry.py
openlineage-oai/openlineage_oai/utils/: __init__.py  naming.py  uri.py
openlineage-oai/tests/: __init__.py  conftest.py
openlineage-oai/tests/integration/: __init__.py
openlineage-oai/tests/integration/mlflow/: __init__.py  test_end_to_end.py
openlineage-oai/tests/unit/: __init__.py  test_init.py  test_utils.py
openlineage-oai/tests/unit/adapters/: test_base.py
openlineage-oai/tests/unit/adapters/mlflow/: __init__.py  test_adapter.py  test_facets.py  test_tracking_store.py  test_utils.py
openlineage-oai/tests/unit/core/: test_config.py  test_emitter.py  test_facets.py  test_registry.py
openshift/: deploy-dsp.sh  deploy.sh  lineage-openshift-ai.yaml  lineage_manifest.py  render_namespace.py  status.sh  test-api.sh
openshift/base/: attu.yaml  buildconfig.yaml  configmap.yaml  inference-api.yaml  marquez.yaml  milvus-buildconfig.yaml  milvus-config.yaml  milvus.yaml  minio.yaml  mlflow-db.yaml  mlflow.yaml  postgres.yaml  pvc.yaml  rag-buildconfig.yaml  redis.yaml  routes.yaml
openshift/dsp/: dspa-secret.yaml  dspa.yaml  kfp-ui.yaml  namespace-injection.md  network-policy-patch.yaml  workflow-controller-patch.yaml
openshift/jobs/: 01-minio-seed.yaml  02-etl.yaml  03-feast-apply.yaml  04-feast-materialize.yaml  05-ml-pipeline.yaml  06-promote-model.yaml
openshift/webhook/: README.md  generate-webhook-certs.sh  lineage-init-container-buildconfig.yaml  mutating-webhook-config.yaml  mutating-webhook-config.yaml.template  webhook-deployment.yaml
src/etl/: run_etl.py  spark_etl.py  (+1 more)
src/rag/: query.py  (+5 more)
wheels/: feast-0.60.1.dev32+g33a2e9542.d20260323-py3-none-any.whl
(+72 files in other folders)
